--- a/Nginx/反向代理-配置项目目录.md
+++ b/Nginx/反向代理-配置项目目录.md
@@ -117,10 +117,12 @@ server {
 
 ```nginx {.line-numbers}
 server {
-  server_name    c.fun
-  listen / {
-    root        /usr/local/myImage/; # 设置静态服务器的根目录为 /usr/local/myImage/；
-    autoindex   on; # 是否打开目录浏览功能
+  server_name     prototype.localhost.fun;
+  listen          80;
+  charset         utf-8;  # 字符集
+  location / {
+    root          /usr/local/myImage/; # 设置静态服务器的根目录为 /usr/local/myImage/；
+    autoindex     on; # 是否打开目录浏览功能
   }
 }
 ```
