--- a/Javascript/关于前端请求.md
+++ b/Javascript/关于前端请求.md
@@ -39,3 +39,4 @@
 ## 请求中断
 
 当某种原因导致请求的接口不再作用到页面时，可以中断请求，减少服务器压力。
+前端在业务上可以给同类型接口一个相同的tag，表示页面中这类tag中同时请求的时候只会请求最后一个，仍在请求的相同tag的接口将会被中断。如同一页面存在list1 和 list2，而两个list由两个接口请求获取，并且同一时间只会展示其中一个，当快速切换的时候，被切换的list已经不会显示，所以仍在发出的请求将被拦截，由即将展示的list的接口请求新数据回来。
