--- a/NestJS搭建博客系统/02.编写静态文章CURD.md
+++ b/NestJS搭建博客系统/02.编写静态文章CURD.md
@@ -353,8 +353,8 @@ export class ArticleController {
 
 ## 参考
 
-[NestJS](https://nestjs.com/) 
-[NestJS 中文网](https://docs.nestjs.cn/7/introduction) 
+* [NestJS](https://nestjs.com/) 
+* [NestJS 中文网](https://docs.nestjs.cn/7/introduction) 
 
 ## 系列
-[NestJS 搭建博客系统（一）— 搭建框架](01.搭建框架.md) 
+* [NestJS 搭建博客系统（一）— 搭建框架](01.搭建框架.md) 
