--- a/NestJS搭建博客系统/03.使用TypeORM+Mysql实现数据持久化.md
+++ b/NestJS搭建博客系统/03.使用TypeORM+Mysql实现数据持久化.md
@@ -330,12 +330,12 @@ export class ArticleService {
 ```
 
 ## 参考
-[NestJS](https://nestjs.com/) 
-[NestJS 中文网](https://docs.nestjs.cn/7/introduction) 
-[TypeORM](https://typeorm.bootcss.com/) 
-[SquelizeORM](https://www.sequelize.com.cn/) 
-[https://github.com/huihuipan/environment](https://github.com/huihuipan/environment) 
+* [NestJS](https://nestjs.com/) 
+* [NestJS 中文网](https://docs.nestjs.cn/7/introduction) 
+* [TypeORM](https://typeorm.bootcss.com/) 
+* [SquelizeORM](https://www.sequelize.com.cn/) 
+* [https://github.com/huihuipan/environment](https://github.com/huihuipan/environment) 
 
 ## 系列
-[NestJS 搭建博客系统（一）— 搭建框架](01.搭建框架.md) 
-[NestJS 搭建博客系统（二）— 编写静态文章CURD](02.编写静态文章CURD.md) 
+* [NestJS 搭建博客系统（一）— 搭建框架](01.搭建框架.md) 
+* [NestJS 搭建博客系统（二）— 编写静态文章CURD](02.编写静态文章CURD.md) 
