--- a/NestJS搭建博客系统/04.使用拦截器、异常过滤器实现统一返回格式.md
+++ b/NestJS搭建博客系统/04.使用拦截器、异常过滤器实现统一返回格式.md
@@ -5,7 +5,7 @@
 
 ## 返回结构体
 在工作中接触到一种比较舒服的接口格式，这里推荐一下，有更好的实践可以分享一下。
-```json
+```typescript
 // 成功返回
 {
   code: 200,
@@ -385,14 +385,14 @@ export const getPagination = (
 ```
 
 ## 参考
-[NestJS](https://nestjs.com/) 
-[NestJS 中文网](https://docs.nestjs.cn/7/introduction) 
-[阮一峰：RESTful API 最佳实践](https://www.ruanyifeng.com/blog/2018/10/restful-api-best-practices.html)  
+* [NestJS](https://nestjs.com/) 
+* [NestJS 中文网](https://docs.nestjs.cn/7/introduction) 
+* [阮一峰：RESTful API 最佳实践](https://www.ruanyifeng.com/blog/2018/10/restful-api-best-practices.html)  
 
 ## 系列
-[NestJS 搭建博客系统（一）— 搭建框架](01.搭建框架.md) 
-[NestJS 搭建博客系统（二）— 编写静态文章CURD](02.编写静态文章CURD.md) 
-[NestJS 搭建博客系统（三）— 使用TypeORM+Mysql实现数据持久化](03.使用TypeORM+Mysql实现数据持久化.md) 
+* [NestJS 搭建博客系统（一）— 搭建框架](01.搭建框架.md) 
+* [NestJS 搭建博客系统（二）— 编写静态文章CURD](02.编写静态文章CURD.md) 
+* [NestJS 搭建博客系统（三）— 使用TypeORM+Mysql实现数据持久化](03.使用TypeORM+Mysql实现数据持久化.md) 
 
 
 nest g in interceptor/transform 
