--- a/NestJS搭建博客系统/05.使用class-validator+类验证器实现表单验证.md
+++ b/NestJS搭建博客系统/05.使用class-validator+类验证器实现表单验证.md
@@ -145,6 +145,8 @@ export class ArticleEditDTO extends ArticleCreateDTO {
 }
 ```
 
+至此，我们实现了article所有接口的表单验证
+
 ## 参考
 * [NestJS](https://nestjs.com/) 
 * [NestJS 中文网](https://docs.nestjs.cn/7/introduction) 
