--- a/NestJS搭建博客系统/06.使用Swagger生成文档.md
+++ b/NestJS搭建博客系统/06.使用Swagger生成文档.md
@@ -195,7 +195,7 @@ export class ArticleEditDTO extends IdDTO {
 这里我们创建几个文件
 
 ```typescript {.line-numbers}
-// src/modules/article/response/article-base.response.ts
+// src/modules/article/vo/article-base.vo.ts
 
 import { ApiProperty } from '@nestjs/swagger'
 
@@ -225,7 +225,7 @@ export class ArticleInfoItem extends ArticleBaseItem {
 ```
 
 ```typescript {.line-numbers}
-// src/modules/article/response/article-list.response.ts
+// src/modules/article/vo/article-list.vo.ts
 
 import { ApiProperty } from "@nestjs/swagger";
 
@@ -282,7 +282,7 @@ export class ArticleListResponse {
 ```
 
 ```typescript {.line-numbers}
-// src/modules/article/response/article-info.response.ts
+// src/modules/article/vo/article-info.vo.ts
 
 import { ApiProperty } from "@nestjs/swagger";
 
@@ -337,8 +337,8 @@ import { ArticleEditDTO } from './dto/article-edit.dto';
 import { IdDTO } from './dto/id.dto';
 import { ListDTO } from './dto/list.dto';
 import { ApiTags, ApiOkResponse } from '@nestjs/swagger';
-import { ArticleInfoData, ArticleInfoResponse } from './response/article-info.response';
-import { ArticleListResponse, ArticleListData } from './response/article-list.response';
+import { ArticleInfoVO, ArticleInfoResponse } from './vo/article-info.vo';
+import { ArticleListResponse, ArticleListVO } from './vo/article-list.vo';
 
 @ApiTags('文章模块')
 @Controller('article')
@@ -351,7 +351,7 @@ export class ArticleController {
   @ApiOkResponse({ description: '文章列表', type: ArticleListResponse })
   async getMore(
     @Query() listDTO: ListDTO,
-  ): Promise<ArticleListData> {
+  ): Promise<ArticleListVO> {
     return await this.articleService.getMore(listDTO)
   }
 
@@ -359,7 +359,7 @@ export class ArticleController {
   @ApiOkResponse({ description: '文章详情', type: ArticleInfoResponse })
   async getOne(
     @Query() idDto: IdDTO
-  ): Promise<ArticleInfoData>{
+  ): Promise<ArticleInfoVO>{
     return await this.articleService.getOne(idDto)
   }
 
@@ -367,7 +367,7 @@ export class ArticleController {
   @ApiOkResponse({ description: '创建文章', type: ArticleInfoResponse })
   async create(
     @Body() articleCreateDTO: ArticleCreateDTO
-  ): Promise<ArticleInfoData> {
+  ): Promise<ArticleInfoVO> {
     return await this.articleService.create(articleCreateDTO)
   }
 
@@ -375,7 +375,7 @@ export class ArticleController {
   @ApiOkResponse({ description: '编辑文章', type: ArticleInfoResponse })
   async update(
     @Body() articleEditDTO: ArticleEditDTO
-  ): Promise<ArticleInfoData> {
+  ): Promise<ArticleInfoVO> {
     return await this.articleService.update(articleEditDTO)
   }
 
@@ -383,7 +383,7 @@ export class ArticleController {
   @ApiOkResponse({ description: '删除文章', type: ArticleInfoResponse })
   async delete(
     @Body() idDto: IdDTO,
-  ): Promise<ArticleInfoData> {
+  ): Promise<ArticleInfoVO> {
     return await this.articleService.delete(idDto)
   }
 }
