--- a/NestJS搭建博客系统/06.使用Swagger生成文档.md
+++ b/NestJS搭建博客系统/06.使用Swagger生成文档.md
@@ -261,7 +261,7 @@ class Pagination {
 
 }
 
-export class ListData {
+export class ArticleListVO {
   @ApiProperty({ type: SimpleInfo, isArray: true })
   list: Array<SimpleInfo>
 
@@ -273,8 +273,8 @@ export class ArticleListResponse {
   @ApiProperty({ description: '状态码', example: 200, })
   code: number
 
-  @ApiProperty({ description: '数据', type: () => ListData, example: ListData, })
-  data: ListData
+  @ApiProperty({ description: '数据', type: () => ArticleListVO, example: ArticleListVO, })
+  data: ArticleListVO
 
   @ApiProperty({ description: '请求结果信息', example: '请求成功' })
   message: string
@@ -306,7 +306,7 @@ class Info {
   content: string;
 }
 
-export class InfoData {
+export class ArticleInfoVO {
   @ApiProperty({ type: Info })
   info: Info
 }
@@ -316,8 +316,8 @@ export class ArticleInfoResponse {
   code: number
 
   @ApiProperty({ description: '数据',
-    type: () => InfoData, example: InfoData, })
-  data: InfoData
+    type: () => ArticleInfoVO, example: ArticleInfoVO, })
+  data: ArticleInfoVO
 
   @ApiProperty({ description: '请求结果信息', example: '请求成功' })
   message: string
