--- a/NestJS搭建博客系统/02.编写静态文章CURD.md
+++ b/NestJS搭建博客系统/02.编写静态文章CURD.md
@@ -355,6 +355,7 @@ export class ArticleController {
 
 * [NestJS](https://nestjs.com/) 
 * [NestJS 中文网](https://docs.nestjs.cn/7/introduction) 
+* [本章节代码](https://github.com/huihuipan/blog-serve/tree/065ca69eca071e1c87dc2a75672eded4a3882fa5)
 
 ## 系列
 * [NestJS 搭建博客系统（一）— 搭建框架](01.搭建框架.md) 
