--- a/NestJS搭建博客系统/03.使用TypeORM+Mysql实现数据持久化.md
+++ b/NestJS搭建博客系统/03.使用TypeORM+Mysql实现数据持久化.md
@@ -335,6 +335,7 @@ export class ArticleService {
 * [TypeORM](https://typeorm.bootcss.com/) 
 * [SquelizeORM](https://www.sequelize.com.cn/) 
 * [https://github.com/huihuipan/environment](https://github.com/huihuipan/environment) 
+* [本章节代码](https://github.com/huihuipan/blog-serve/tree/94fee023358e67790b13eec52eaf8ae1df41d548)
 
 ## 系列
 * [NestJS 搭建博客系统（一）— 搭建框架](01.搭建框架.md) 
