--- a/NestJS搭建博客系统/05.使用class-validator+类验证器实现表单验证.md
+++ b/NestJS搭建博客系统/05.使用class-validator+类验证器实现表单验证.md
@@ -152,6 +152,7 @@ export class ArticleEditDTO extends ArticleCreateDTO {
 * [NestJS 中文网](https://docs.nestjs.cn/7/introduction) 
 * [class-validator](https://github.com/swanest/class-validator)
 * [class-transform](https://github.com/typestack/class-transformer)
+* [本章节代码](https://github.com/huihuipan/blog-serve/tree/e15b0d1d1d704b3e3031f834f5fb7d8d35d97122)
 
 ## 系列
 * [NestJS 搭建博客系统（一）— 搭建框架](01.搭建框架.md) 
