--- a/NestJS搭建博客系统/07.使用JWT实现注册登录.md
+++ b/NestJS搭建博客系统/07.使用JWT实现注册登录.md
@@ -861,6 +861,7 @@ bootstrap();
 ## 参考
 * [NestJS](https://nestjs.com/) 
 * [NestJS 中文网](https://docs.nestjs.cn/7/introduction) 
+* [本章节代码](https://github.com/huihuipan/blog-serve/tree/e91fb67d218533c6312ac8d7c1812e1f9a179b7a)
 
 ## 系列
 * [NestJS 搭建博客系统（一）— 搭建框架](01.搭建框架.md) 
