--- a/NestJS搭建博客系统/06.使用Swagger生成文档.md
+++ b/NestJS搭建博客系统/06.使用Swagger生成文档.md
@@ -399,6 +399,7 @@ export class ArticleController {
 ## 参考
 * [NestJS](https://nestjs.com/) 
 * [NestJS 中文网](https://docs.nestjs.cn/7/introduction) 
+* [本章节代码](https://github.com/huihuipan/blog-serve/tree/70d0141ea00409a773f08b632c51a902376c69d9)
 
 ## 系列
 * [NestJS 搭建博客系统（一）— 搭建框架](01.搭建框架.md) 
